tests/paczka1/fuzzy1/86636724.err
Error in line 3: WjoxkBsZ A812 36,3
Error in line 16: S926 A821 37,1
Error in line 22: y1nfmDIr0 A812 33,1
Error in line 23: y1nfmDIr0 A821 69,9
Error in line 10: GtMRuTs A430 85,3
Error in line 13: t104Fplgb1 S926 69,7
Error in line 29: GtMRuTs A812 47,6
